rustbook-ru/listings/ch05-using-structs-to-structure-related-data/output-only-01-debug/output.txt
$ cargo run
   Compiling прямоугольникs v0.1.0 (file:///projects/прямоугольникs)
error[E0277]: `Прямоугольник` doesn't implement `Debug`
  --> src/main.rs:12:31
   |
12 |     println!("прямоугольник1 is {:?}", прямоугольник1);
   |                               ^^^^^ `Прямоугольник` cannot be formatted using `{:?}`
   |
   = help: the trait `Debug` is not implemented for `Прямоугольник`
   = note: add `#[derive(Debug)]` to `Прямоугольник` or manually `impl Debug for Прямоугольник`
   = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `Прямоугольник` with `#[derive(Debug)]`
   |
1  + #[derive(Debug)]
2  | struct Прямоугольник {
   |

For more information about this error, try `rustc --explain E0277`.
error: could not compile `прямоугольникs` (bin "прямоугольникs") due to 1 previous error
